--- a/dags/notebooks/mynb.ipynb
+++ b/dags/notebooks/mynb.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"minfil.json\") as f:\n",
+    "with open(\"myfile.json\") as f:\n",
     "    data = f.read()"
    ]
   }
