run quarto pod op

--- a/dags/notebooks/quarto.ipynb
+++ b/dags/notebooks/quarto.ipynb
@@ -66,7 +66,7 @@
    ],
    "source": [
     "#| label: fig\n",
-    "#| fig-cap: Dette er en figur\n",
+    "#| fig-cap: Dette er en figur, og denne figurteksten er oppdatert.\n",
     "#| include: true\n",
     "r = np.arange(0, 2, 0.01)\n",
     "theta = 2 * np.pi * r\n",
@@ -989,7 +989,7 @@
    ],
    "source": [
     "#| label: fig2\n",
-    "#| fig-cap: Dette er en plotly figur\n",
+    "#| fig-cap: Dette er en plotly figur, jeg har nå oppdatert denne figurteksten.\n",
     "#| include: true\n",
     "import plotly.graph_objects as go\n",
     "fig = go.Figure(\n",
